--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,17 @@ body {
     line-height: 1.3;
 }
 
+#container {
+    width: 100vw;
+}
+
 h1 {
     font-family: 'Amita';
     font-size: 4rem;
 }
 
 h2 {
+    padding-left: 20px;
     font-family: 'Amita';
     font-size: 2rem;
     color: #aaa9bc;
@@ -101,6 +106,50 @@ a, a:visited, a:active, a:hover {
     float: right;
 }
 
+#skillsContainer {
+    display: flex;
+}
+
+#skills, #tools {
+    margin: 2rem 1.5rem 2rem 1.5rem;
+    width: 95vw;
+    border: 2px solid #aaa9bc;
+    border-radius: 25px;
+}
+
+#skillsbody, #toolsbody {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+#skills h3, #tools h3 {
+    margin-left: 20px;
+    margin-top: 15px;
+}
+
+.left, .right {
+    width: 49%;
+}
+
+.left {
+    border-right: 2px solid #aaa9bc;
+}
+
+.svg {
+    width: 50px;
+}
+
+.skill {
+    display: flex;
+    margin-bottom: 15px;
+    margin-left: 20px;
+}
+
+.skill div {
+    margin-left: 15px;
+}
+
 @media (min-width: 768px) {
     h1 {
         font-size: 6rem;
@@ -112,5 +161,13 @@ a, a:visited, a:active, a:hover {
 
     .project {
         width: 300px;
+    }
+
+    #skills {
+        width: 45%;
+    }
+
+    #tools {
+        width: 45%;
     }
 }
