--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body {
     font-family: 'Linden Hill';
     font-size: 18px;
     line-height: 1.3;
+    overflow-x: hidden;
+}
+
+p {
+    margin-bottom: 15px;
 }
 
 #container {
@@ -34,7 +39,7 @@ h3 {
 }
 
 .title {
-    width: 100vw;
+    width: 100%;
     border-bottom: 1px solid #aaa9bc;
 }
 
@@ -75,6 +80,32 @@ button:hover a {
 a, a:visited, a:active, a:hover {
     color: #aaa9bc;
     text-decoration: none;
+}
+
+#about-me {
+    width: 65%;
+    border: 2px solid #aaa9bc;
+    border-radius: 25px;
+    margin: 0 auto;
+    margin-top: 20px;
+    display: flex;
+}
+
+.img {
+    width: 40%;
+    margin: 20px;
+    padding-right: 20px;
+    border-right: 1px solid #aaa9bc;
+}
+
+.img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+
+#about-me .text {
+    margin: 20px 20px 20px 5px;
 }
 
 .project {
@@ -148,6 +179,24 @@ a, a:visited, a:active, a:hover {
 
 .skill div {
     margin-left: 15px;
+}
+
+@media (max-width: 768px) {
+
+    #about-me {
+        flex-flow: column nowrap;
+        justify-content: space-between;
+    }
+
+    #skillsContainer {
+        flex-flow: column nowrap;
+        justify-content: space-between;
+    }
+
+    #skills, #tools {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 @media (min-width: 768px) {
