--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,12 @@ h3 {
     padding: 15rem 0 1.5rem 0;
 }
 
+#thanks {
+    padding: 15rem 0 1.5rem 0;
+    margin: 0 auto;
+    text-align: center;
+}
+
 button {
     background-color: #1c1e2e;
     color: #aaa9bc;
