--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
     color: #f1f1e6;
     font-family: 'Linden Hill';
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.5;
     overflow-x: hidden;
 }
 
@@ -98,8 +98,7 @@ a, a:visited, a:active {
     width: 95%;
     border: 2px solid #aaa9bc;
     border-radius: 25px;
-    margin: 0 auto;
-    margin-top: 20px;
+    margin: 20px auto;
     display: flex;
 }
 
@@ -117,6 +116,21 @@ a, a:visited, a:active {
 
 #about-me .text {
     margin: 20px 20px 20px 5px;
+}
+
+.experience {
+    width: 95vw;
+    margin: 2rem 1.5rem;
+}
+
+.job {
+    display: flex;
+    margin: 20px 0;
+}
+
+.date {
+    margin-right: 2.5rem;
+    width: 25%;
 }
 
 .project {
@@ -139,9 +153,8 @@ a, a:visited, a:active {
 
 .prj_img {
     width: 300px;
-    height: auto;
+    height: 150px;
     border-radius: 25px 25px 0 0;
-    margin-bottom: 20px;
 }
 
 .prj_text button {
